// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with className: value should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-custom"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with htmlType: "button" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with htmlType: "reset" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="reset"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with htmlType: "submit" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="reset"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with label: value should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with label: value with icon: value should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="svg-inline--fa fa-radiation pr-2"
      data-icon="radiation"
      data-prefix="fas"
      focusable="false"
      role="img"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M215 186.7c-23.9 13.8-40 39.7-40 69.3L31 256c-17.7 0-32.2-14.4-30-31.9C9.7 154 46.8 92.7 100.3 52c14.1-10.7 33.8-5.3 42.7 10l72 124.7zM255 336c14.6 0 28.2-3.9 40-10.7l72 124.8c8.8 15.3 3.7 35.1-12.6 41.9c-30.6 12.9-64.2 20-99.4 20s-68.9-7.1-99.4-20c-16.3-6.9-21.4-26.6-12.6-41.9l72-124.8c11.8 6.8 25.4 10.7 40 10.7zm224-80l-144 0c0-29.6-16.1-55.5-40-69.3L367 62c8.8-15.3 28.6-20.7 42.7-10c53.6 40.7 90.6 102 99.4 172.1c2.2 17.5-12.4 31.9-30 31.9zM257 208a48 48 0 1 1 -2 96 48 48 0 1 1 2-96z"
        fill="currentColor"
      />
    </svg>
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with onClick: value should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with size: lg should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-lg"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with size: sm should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-sm"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "danger" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-danger"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "danger" with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline btn-danger"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "info" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-info"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "info" with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline btn-info"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "muted" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-muted"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "muted" with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline btn-muted"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "primary" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-primary"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "primary" with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline btn-primary"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "success" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-success"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "success" with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline btn-success"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "warning" should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-warning"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with type: "warning" with outline: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn btn-outline btn-warning"
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;

exports[`<Button /> with url: value should match the snapshot 1`] = `
<DocumentFragment>
  <a
    class="btn"
    href="/path/to/resource"
  >
    Greet
  </a>
</DocumentFragment>
`;

exports[`<Button /> with url: value with disabled: true should match the snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn"
    disabled=""
    type="button"
  >
    Greet
  </button>
</DocumentFragment>
`;
